--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "angular": "1.5.x",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1"
   }
 }
