--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "keywords": [
     "Promise",
     "router",
-    "angular",
+    "angular"
   ],
   "author": "Vasudevan PALANI",
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.18.8",
+    "gulp": "^3.9.1"
   }
 }
