Updated working version

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.18.8",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-uglifyjs": "^0.6.2"
   }
 }
