--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vasudevan-palani/angular-promise-router.git"
+  },
   "keywords": [
     "Promise",
     "router",
@@ -13,7 +17,9 @@
   ],
   "author": "Vasudevan PALANI",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "angular":"^1.x.x",
+  },
   "devDependencies": {
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
